# proteus

./: Cargo.toml  LICENSE  README.md  build.rs  notes.md  rust-toolchain.toml
.github/workflows/: ci.yml  lint.yml  sani.yml  sanitizer.yml  sys.yml  system.yml  unit_integration.yml
examples/psf/: example.psf  handshake_with_payload.psf  random_noauth.psf  simple.psf  tls_mimic.psf
lib/enum-from/: Cargo.toml
lib/enum-from/src/: lib.rs
src/: main.rs
src/cli/: args.rs  mod.rs
src/cli/check/: mod.rs
src/cli/pt/: control.rs  mod.rs
src/cli/pt/config/: keys.rs  mod.rs  parse.rs
src/cli/socks/: mod.rs
src/common/: mock.rs  mod.rs
src/crypto/: chacha.rs  kdf.rs  mod.rs  null.rs  pubkey.rs
src/lang/: action.rs  command.rs  common.rs  compiler.rs  data.rs  field.rs  format.rs  interpreter.rs  mem.rs  message.rs  mod.rs  spec.rs  task.rs  test.rs  types.rs
src/lang/compiler/: mod.rs  parser.rs
src/lang/interpreter/: crypto.rs  forwarder.rs  io.rs  loader.rs  mem.rs  memory.rs  mod.rs  program.rs  vm.rs
src/lang/ir/: bridge.rs  mod.rs  v1.rs
src/lang/ir/test/: basic.rs  basic_enc.rs  mod.rs
src/lang/parse/: example.psf  implementation.rs  main.rs  mod.rs  null.rs  proteus.rs  proteus_lite.pest
src/lang/parse/examples/: shadowsocks.psf  simple.psf
src/lang/proteus/: mod.rs  parser.rs
src/lang/spec/: crypto.rs  message.rs  mod.rs  proteus.rs
src/lang/spec/test/: basic.rs  basic_enc.rs
src/net/: frame.rs  mod.rs
src/net/or/: mod.rs
src/net/proto/: mod.rs
src/net/proto/null/: frames.rs  mod.rs  spec.rs  states.rs
src/net/proto/or/: client.rs  formatter.rs  frames.rs  mod.rs  spec.rs  states.rs
src/net/proto/proteus/: action.rs  format.rs  formatter.rs  frames.rs  message.rs  mod.rs  protocol.rs  spec.rs  states.rs
src/net/proto/socks/: address.rs  formatter.rs  frames.rs  mod.rs  server.rs  spec.rs  states.rs
src/net/proto/upgen/: client.rs  formatter.rs  frames.rs  generator.rs  message.rs  mod.rs  spec.rs  states.rs
src/net/socks/: mod.rs  server.rs
src/net/upgen/: client.rs  mod.rs
src/net/upgen/generator/: mod.rs
src/pt/: config.rs  control.rs  env.rs  mod.rs
src/pt/config/: keys.rs  mod.rs  parse.rs
tests/: integration.rs  shadow.rs  system.rs
tests/fixtures/: handshake_without_payload.psf  key.psf  padding.psf  random.psf  separate.psf  shadowsocks_padded.psf
tests/linux/: mod.rs
tests/linux/shadow/: mod.rs
tests/linux/shadow/tgen/: mod.rs  shadow.yaml.template  tgen-client.graphml.xml.template
tests/linux/shadow/tor/: mod.rs  torrc.template
tests/system/linux/shadow/: mod.rs
(+18 files in other folders)
