[package]
name = "proteus"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-from = { path = "lib/enum-from" }
async-trait = "0.1.0"
bytes = "1.4.0"
log = "0.4.0"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "io-util", "net"] }
typestate = "0.8.0"
pest = "2.0"
pest_derive = "2.0"
petgraph = "0.6.3"

# Crypto dependencies
x25519-dalek = "1" # ephemeral key exchange
rand = "0.8.5" # randomness for local keygen
salsa20 = "0.10.2" # CPRNG for Nonce generation
chacha20poly1305 = "0.9.0" # AEAD cipher
