[package]
name = "proteus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asn1 = "0.16.1"
enum-from = { path = "lib/enum-from" }
bytes = "1.4.0"
log = "0.4.0"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "io-util", "net", "sync"] }
pest = "2.0"
pest_derive = "2.0"
petgraph = "0.6.3"
anyhow = "1.0"
itertools = "0.11.0"

# Crypto dependencies
x25519-dalek = { version = "2", features = ["getrandom"] } # ephemeral key exchange
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
salsa20 = "0.10.2" # CPRNG for Nonce generation
chacha20poly1305 = "0.9.0" # AEAD cipher
async-trait = "0.1.81"
sha256 = "1.5.0"
hex = "0.4.3"

pem = "3.0"

[build-dependencies]
which = "4.4.0"

[dev-dependencies]
tokio-test = "0.4.4"
