[package]
name = "proteus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
asn1 = "0.16.1"
async-trait = "0.1.81"
bytes = "1.4.0"
chacha20poly1305 = "0.9.0" # AEAD cipher
clap = { version = "4.5.0", features = ["derive"] }
enum-from = { path = "lib/enum-from" }
env_logger = "0.11.0"
hex = "0.4.3"
itertools = "0.11.0"
log = "0.4.0"
pem = "3.0"
pest = "2.0"
pest_derive = "2.0"
petgraph = "0.6.3"
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["getrandom"] }
salsa20 = "0.10.2" # CPRNG for Nonce generation
sha256 = "1.5.0"
tokio = { version = "1.17.0", features = ["macros", "rt", "rt-multi-thread", "io-util", "net", "sync"] }
x25519-dalek = { version = "2", features = ["getrandom"] } # ephemeral key exchange

[build-dependencies]
which = "4.4.0"

[dev-dependencies]
test_bin = "0.4.0"
test_each_file = "0.3.0"
tokio-test = "0.4.4"
